# whooing-py

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: API_COVERAGE.md  CLI_DESIGN.md  CLI_USAGE.md  RELEASE.md
scripts/: collect_api_results.py
src/whooing/: __init__.py  _transport.py  async_client.py  auth.py  cli.py  cli_config.py  cli_output.py  client.py  exceptions.py  models.py  pydantic_models.py  resources.py  response.py  retry.py  types.py
src/whooing/_pydantic_models/: auth.py  base.py  resources.py  responses.py  types.py
tests/: helpers.py  test_api_reference_coverage.py  test_api_samples.py  test_app_auth.py  test_async_client.py  test_cli.py  test_client.py  test_integration.py  test_models.py  test_oauth.py  test_pydantic_models.py  test_pydantic_response.py  test_request_model_fields.py  test_resource_paths.py  test_resources.py  test_retry.py
tests/fixtures/api_samples/: entries_list.json  notifications.json  user.json
