[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whooing-py"
version = "0.1.0"
description = "Python client library for the Whooing Developer API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "flynn" }
]
keywords = ["whooing", "api", "client", "accounting", "finance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
pydantic = [
  "pydantic>=2.10,<3",
]

[project.urls]
Documentation = "https://whooing.com/api/docs"
Issues = "https://github.com/flynnpark/whooing-py/issues"
Repository = "https://github.com/flynnpark/whooing-py"

[project.scripts]
whooing = "whooing.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pre-commit>=4.0",
  "pydantic>=2.10,<3",
  "pytest>=8.3",
  "python-dotenv>=1.0",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/whooing"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["whooing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: real Whooing API tests that require credentials",
]
